<resources>
    <string name="app_name">Diplom</string>
    <string name="titleStartFragment">Результаты работы приложения носят лишь рекомендательный характер. Окончательный диагноз может поставить только врач</string>
    <string name="buttonChoseSymptoms">Выбор симптомов</string>
    <string name="buttonHistory">Просмотр истории диагнозов</string>
    <string name="buttonEmergencyCall">Экстренный вызов</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="CBPb_Head">Голова</string>
    <string name="CBPb_Throat">Горло</string>
    <string name="CBPb_Chest">Грудь</string>
    <string name="CBPb_Stomach">Живот</string>
    <string name="CBPb_Skin">Кожа</string>
    <string name="CBPb_GeneralMalaise">Общее недомоганание</string>
    <string name="CBPb_action">Общий список симптомов</string>

    <string name="ChosenSymptomsScreenName">Итоговый список симптомов</string>
    <string name="ChosenSymptomsScreenButton">Подробное диагностирование</string>

    <string name="emptyListSymptoms">Выберите хотя бы один симптом</string>


    <string name="coughTitle">Какой у вас кашель?</string>
    <string name="wetCough">Влажный</string>
    <string name="dryCough">Сухой</string>

    <string name="search_hint">Поиск симптомов</string>
    <string name="app_label">SearchExample</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>