<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChooseBodyPart">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">


        <Button
            style="@style/ChooseBodyPart_Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/CBPb_Head"
            tools:ignore="ButtonStyle">

        </Button>


        <Button
            style="@style/ChooseBodyPart_Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/CBPb_Throat">

        </Button>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">


        <Button

            style="@style/ChooseBodyPart_Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/CBPb_Chest">

        </Button>

        <Button
            style="@style/ChooseBodyPart_Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/CBPb_Stomach">

        </Button>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            style="@style/ChooseBodyPart_Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/CBPb_Skin">

        </Button>

        <Button
            style="@style/ChooseBodyPart_Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/CBPb_GeneralMalaise">

        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="5dp"


            android:text="@string/CBPb_action">


        </Button>
    </LinearLayout>


</LinearLayout>