<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

    </data>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".diseases.cough.CoughFragment">

    <TextView
        style="@style/SymptomsTextStyle"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="40dp"
        android:text="@string/coughTitle" />
    <Button
        android:id="@+id/wetCough"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:text="@string/wetCough"

        
        >
    </Button>
    <Button
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wetCough"
        android:layout_centerHorizontal="true"
        android:text="@string/dryCough">
    </Button>

</RelativeLayout>

</layout>