<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="italic"
            android:textColor="#008080"
            android:text="@string/titleStartFragment"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            >
        </TextView>

        <Button
            style="@style/Start_fragment_buttons"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:text="@string/buttonChoseSymptoms"
            android:layout_marginTop="150dp"
            ></Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Start_fragment_buttons"
            android:textSize="15sp"
            android:text="@string/buttonHistory"
            android:layout_marginTop="60dp"
            >

        </Button>

    </LinearLayout>



</LinearLayout>